# hass-napoleon

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: unit_tests.yml  validate.yml
custom_components/napoleon/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  light.py  manifest.json  number.py  select.py  strings.json  switch.py
custom_components/napoleon/translations/: en.json
tests/: conftest.py  test_climate.py  test_config_flow.py  test_init.py  test_light.py  test_number.py  test_power_gating.py  test_select.py  test_switch.py
