[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-napoleon"
version = "0.0.1"
description = "Home Assistant integration for Napoleon Astound-series fireplaces"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Stefan Slivinski", email = "sslivins@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
tests = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component>=0.13.250",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pynapoleon @ git+https://github.com/sslivins/pynapoleon@main"
]

[project.urls]
"Homepage" = "https://github.com/sslivins/hass-napoleon"
"Bug Tracker" = "https://github.com/sslivins/hass-napoleon/issues"

[tool.setuptools]
# Repo-level package config exists only for the dev tooling.
packages = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.14"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["homeassistant.*", "pytest_homeassistant_custom_component.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
